<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:windowSoftInputMode="stateVisible" >

    <TextView 
        android:id="@+id/banktext"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/bank" />

    <TextView 
        android:id="@+id/bank"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@+id/banktext" />
    
    <TextView 
        android:id="@+id/numerotext"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/banktext"
        android:text="@string/numero" />
    
    <TextView 
        android:id="@+id/numero"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/banktext"
        android:layout_toRightOf="@+id/numerotext" />
    
    <TextView 
        android:id="@+id/datetext"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/numerotext"
        android:text="@string/date" />
    
    <TextView 
        android:id="@+id/date"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/numerotext"
        android:layout_toRightOf="@+id/datetext" />
    
    <RelativeLayout 
        android:id="@+id/relative_edittext"
   	 	android:layout_width="wrap_content"
   	 	android:layout_height="wrap_content"
   	 	android:layout_below="@+id/datetext" >
    
	    <TextView 
	        android:id="@+id/edittexttext"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:text="@string/edittext"
	        android:layout_centerVertical="true" />
	    
	    <EditText 
	        android:id="@+id/edittext"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_toRightOf="@+id/edittexttext"
	        android:numeric="integer"
	        android:hint="@string/cryptogramme" />
    
	 </RelativeLayout>
	    
    <Button 
        android:id="@+id/button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/relative_edittext"
        android:hint="@string/button"
        android:layout_centerInParent="true" />

</RelativeLayout>
